--- a/src/src/pages/index.astro
+++ b/src/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import MyReactComponent from '../components/MyReactComponent.tsx';
+import Layout from '../layouts/Layout.astro';
+
 ---
 
 <Layout title="Welcome to Astro.">
@@ -34,6 +36,8 @@ import Card from '../components/Card.astro';
 			</defs>
 		</svg>
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
+        <MyReactComponent />
+
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
