--- a/src/src/pages/index.astro
+++ b/src/src/pages/index.astro
@@ -1,20 +1,17 @@
 ---
 import Example from '../components/MyCombobox.tsx';
-import MyReactComponent from '../components/MyReactComponent.tsx';
 import Layout from '../layouts/Layout.astro';
-
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-        <MyReactComponent />
+		<!-- <h1>Welcome to <span class="text-gradient">Astro</span></h1> -->
         <Example client:load/>
-
+<!--
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
+		</p> -->
 	</main>
 </Layout>
 
