--- a/src/src/pages/index.astro
+++ b/src/src/pages/index.astro
@@ -13,7 +13,7 @@ import Layout from '../layouts/Layout.astro';
                         To get started, open the directory <code>src/pages</code> in your project.<br />
                         <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
                     </p> -->
-            <p class="instructions">soime text here</p>
+            <!-- <p class="instructions">soime text here</p> -->
         </main>
 </Layout>
 
