--- a/src/src/pages/index.astro
+++ b/src/src/pages/index.astro
@@ -1,67 +1,76 @@
 ---
-import Example from '../components/MyCombobox.tsx';
-import Layout from '../layouts/Layout.astro';
+import Example from "../components/MyCombobox.tsx";
+import Layout from "../layouts/Layout.astro";
 ---
+
 <Layout title="Azure Name Checker">
-		<!-- <h1>Welcome to <span class="text-gradient">Astro</span></h1> -->
-        <main>
-            <h1>Azure Resource Name Checker</h1>
-            <Example client:load/>
-            <!--
-                    <p class="instructions">
-                        To get started, open the directory <code>src/pages</code> in your project.<br />
-                        <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-                    </p> -->
-            <!-- <p class="instructions">soime text here</p> -->
-        </main>
+  <!-- <h1>Welcome to <span class="text-gradient">Astro</span></h1> -->
+  <main>
+    <h1>Azure Resource Name Checker</h1>
+    <Example client:load />
+    <div class="flex flex-col items-center px-40 mt-20">
+      <p class="text-gray-600 text-center mb-4">
+        The name checker only checks formatting rules, your deployment may still
+        fail if the name includes reserved keywords for that resource type, or
+        if the name is already in use.
+      </p>
+      <p class="text-gray-600 text-center">
+        This website is not affiliated with, endorsed by, or sponsored by
+        Microsoft Azure.
+      </p>
+    </div>
+  </main>
 </Layout>
 
 <style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-        margin-top: 6rem;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}
+  main {
+    margin: auto;
+    padding: 1rem;
+    color: white;
+    font-size: 20px;
+    line-height: 1.6;
+  }
+  .astro-a {
+    position: absolute;
+    top: -32px;
+    left: 50%;
+    transform: translatex(-50%);
+    width: 220px;
+    height: auto;
+    z-index: -1;
+  }
+  h1 {
+    font-size: 3.5rem;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    margin-bottom: 1em;
+    margin-top: 6rem;
+  }
+  .text-gradient {
+    background-image: var(--accent-gradient);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 400%;
+    background-position: 0%;
+  }
+  .instructions {
+    margin-bottom: 2rem;
+    border: 1px solid rgba(var(--accent-light), 25%);
+    background: linear-gradient(
+      rgba(var(--accent-dark), 66%),
+      rgba(var(--accent-dark), 33%)
+    );
+    padding: 1.5rem;
+    border-radius: 8px;
+  }
+  .instructions strong {
+    color: rgb(var(--accent-light));
+  }
+  .link-card-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
+    gap: 2rem;
+    padding: 0;
+  }
 </style>
