--- a/src/src/pages/index.astro
+++ b/src/src/pages/index.astro
@@ -1,10 +1,13 @@
 ---
-import NameChecker from "../components/NameChecker.tsx";
-import Layout from "../layouts/Layout.astro";
+import NameChecker from '../components/NameChecker.tsx'
+import Layout from '../layouts/Layout.astro'
 ---
+
 <Layout title="Azure Name Checker">
-    <h1 class="text-6xl font-bold text-center mb-4 mt-24 text-white">Azure Resource Name Checker</h1>
-    <main class="mx-auto p-4 text-white text-xl leading-relaxed">
+  <h1 class="text-6xl font-bold text-center mb-4 mt-24 text-white">
+    Azure Resource Name Checker.
+  </h1>
+  <main class="mx-auto p-4 text-white text-xl leadin-relaxed">
     <NameChecker client:load />
     <div class="flex flex-col items-center px-40 mt-20">
       <p class="text-gray-600 text-center mb-4">
