add site verifier

--- a/src/src/layouts/Layout.astro
+++ b/src/src/layouts/Layout.astro
@@ -10,6 +10,10 @@ const { title } = Astro.props
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="google-site-verification"
+      content="4eAlTa-fk29cXq_fmkmTIjcWD6Lm4EFuOLE5WBsidWw"
+    />
     <link
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔥</text></svg>"
