--- a/src/src/pages/index.astro
+++ b/src/src/pages/index.astro
@@ -7,7 +7,7 @@ import Layout from '../layouts/Layout.astro'
   <h1 class="text-6xl font-bold text-center mb-4 mt-24 text-white">
     Azure Resource Name Checker
   </h1>
-  <main class="mx-auto p-4 text-white text-xl leadin-relaxed">
+  <div class="mx-auto p-4 text-white text-xl leadin-relaxed">
     <NameChecker client:load />
     <div class="flex flex-col items-center px-40 mt-20">
       <p class="text-blue-300 text-center mb-4">
@@ -20,5 +20,5 @@ import Layout from '../layouts/Layout.astro'
         Microsoft Azure.
       </p>
     </div>
-  </main>
+  </div>
 </Layout>
